<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">玩赚9527</string>
    <string name="version_text">Version&#160;&#160;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone">手机号码</string>
    <string name="password">密码</string>
    <string name="save_password">保存密码</string>
    <string name="empty_phone">请输入手机号码</string>
    <string name="empty_password">请输入密码</string>
    <string name="register_app_acount">注册玩赚9527账号</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败，请重新登录</string>
    <string name="my_subordinate">我的下级</string>
    <string name="my_subordinate_count">我的下级人数</string>
    <string name="my_subordinate_points">我的下级总收益</string>
    <string name="signin">签到</string>
    <string name="signin_today">今日已签到</string>
    <string name="not_signin_today">今日未签到</string>
    <string name="signin_success">签到成功</string>
    <string name="recent_signin_info">最近5天签到情况</string>
    <string name="get_profit_info">获取?银两</string>
    <string name="profit_info">银两</string>
    <string name="have_signin">已签到</string>
    <string name="not_signin">未签到</string>
    <string name="empty_signin_info">无最近签到信息</string>
    <string name="system_setting">系统设置</string>
    <string name="logout">注销登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="system_message">系统消息</string>
    <string name="empty_message_hint">暂无系统消息</string>
    <string name="my_profit">我的收益</string>
    <string name="realtime_points">今日银两(未审核)</string>
    <string name="yesterday_points">昨日银两(已审核)</string>
    <string name="total_points">历史总银两(已审核)</string>
    <string name="withdraw_points">已提现收益</string>
    <string name="withdrawable_points">可提现收益</string>
    <string name="profit_table_hint">收入统计表</string>
    <string name="empty_profit_date">暂无收益</string>
    <string name="task_profit_hint">转发任务</string>
    <string name="article_profit_hint">转发文章</string>
    <string name="other">其他</string>
    <string name="task_points">转发任务收益</string>
    <string name="task_count">转发任务数</string>
    <string name="task_view_count">转发任务阅读数</string>
    <string name="article_points">转发文章收益</string>
    <string name="article_count">转发文章数</string>
    <string name="article_view_count">转发文章阅读数</string>
    <string name="read_article_in_app_points">应用内阅读文章</string>
    <string name="like_article_in_app_points">应用内点赞文章</string>
    <string name="about_app">关于玩赚9527</string>
    <string name="function_introduction">功能介绍</string>
    <string name="help_center">帮助中心</string>
    <string name="feedback">问题反馈</string>
    <string name="score">评&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;分</string>
    <string name="qq_group">QQ群</string>
    <string name="contact_phone">客服电话</string>
    <string name="business_qq">商务QQ</string>
    <string name="select_qq_number">请选择要复制的号码</string>
    <string name="copy_success">已复制到剪切板</string>
    <string name="no_app_market">没有找到应用市场</string>
    <string name="withdraw_records">已提现</string>
    <string name="withdraw_data">提现日期</string>
    <string name="withdraw_count">提现金额</string>
    <string name="is_not_permitted">未审核</string>
    <string name="is_fail_permitted">审核未通过</string>
    <string name="is_withdraw">已提现</string>
    <string name="is_not_withdraw">未提现</string>
    <string name="empty_withdraw_hint">暂无提现记录</string>
    <string name="withdraw_apply">申请提现</string>
    <string name="apply_withdraw_points">申请提现金额</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="change_alipay_notify">暂不支持自助修改支付宝账号，请联系客服修改</string>
    <string name="apply_withdraw">提现</string>
    <string name="submit_success">提交成功</string>
    <string name="empty_withdraw_input">请输入提现金额</string>
    <string name="zero_warn">提现金额不能为0</string>
    <string name="overflow_warn">提现金额不能超过最大可提现金额</string>
    <string name="person_info">个人资料</string>
    <string name="user_head">用户头像</string>
    <string name="phone_number">手机号码</string>
    <string name="wechat_account">微&#160;&#160;信&#160;&#160;号</string>
    <string name="email_account">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;箱</string>
    <string name="qq_account">Q&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Q</string>
    <string name="nickname">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称</string>
    <string name="gender">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="place">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区</string>
    <string name="delivery_address">收货地址</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="qq_hint">请输入QQ号码</string>
    <string name="wechat_hint">请输入微信号</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="delivery_address_hint">请输入收货地址，最长120字</string>
    <string name="alipay_hint">请输入支付宝账号</string>
    <string name="alipay">支&#160;&#160;付&#160;&#160;宝</string>
    <string name="invite_others">我要邀请</string>
    <string name="invite_user">邀请用户</string>
    <string name="invite_code_hint">邀请码:</string>
    <string name="invite_text">邀请你来使用玩赚9527，扫描二维码加入吧！</string>
    <string name="click_to_copy">点击这里复制到剪切板</string>
    <string name="edit_email_title">邮箱</string>
    <string name="edit_qq_title">QQ</string>
    <string name="edit_wechat_title">微信号</string>
    <string name="edit_nickname_title">昵称</string>
    <string name="select_address_title">所在地区</string>
    <string name="select_gender_title">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="generate_code_fail">生成二维码失败</string>
    <string name="change_head">更换头像</string>
    <string name="select_from_gallery">从手机相册中获取</string>
    <string name="select_by_take_photo">相机</string>
    <string name="no_exist_sdcard">请插入内存卡</string>
    <string name="user_info">用户信息</string>
    <string name="today_signin">今日签到</string>
    <string name="modify_password">修改密码</string>
    <string name="old_password">原始密码</string>
    <string name="old_password_hint">请输入原始密码</string>
    <string name="new_password">新&#160;&#160;密&#160;&#160;码</string>
    <string name="new_password_hint">请设置新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_password_hint">请确认新密码</string>
    <string name="empty_old_password">密码不能为空</string>
    <string name="different_password">两次输入的密码不一致</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="task_list">任务中心</string>
    <string name="empty_task_hint">当前没有任务</string>
    <string name="task_price">单价&#160;&#160;</string>
    <string name="status_offline">已结束</string>
    <string name="status_online">进行中</string>
    <string name="status_finish">已抢完</string>
    <string name="retweet_count">转发次数&#160;&#160;</string>
    <string name="rest_count">剩余次数&#160;&#160;</string>
    <string name="begin_time">开始时间&#160;&#160;</string>
    <string name="end_time">结束时间&#160;&#160;</string>
    <string name="article_list">文章中心</string>
    <string name="empty_article_hint">当前没有文章</string>
    <string name="view_count">阅读量&#160;&#160;</string>
    <string name="like_count">点赞量&#160;&#160;</string>
    <string name="share_title">分享获取收益</string>
    <string name="wechat_friend">微信朋友</string>
    <string name="wechat_moment">朋友圈</string>
    <string name="share_success">分享成功</string>
    <string name="try_now">立即体验</string>
    <string name="jump">跳过</string>
    <string name="clear_cache_success">缓存已清除</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">点击查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_load_all">已加载全部数据</string>
    <string name="server_error">服务器错误</string>
    <string name="timeout_error">请求超时</string>
    <string name="unknow_error">未知错误</string>
    <string name="web_loading">页面加载中&#8230;</string>
    <string name="fail_to_load_webpage">加载失败</string>
    <string name="unit_people">人</string>
    <string name="unit_yuan">元</string>
    <string name="unit_point">两</string>
    <string name="empty_input">输入内容不能为空</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="task_detail">任务详情</string>
    <string name="article_detail">文章详情</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="network_error">网络不可用，请检查你的网络设置</string>
    <string name="dialog_title">提示</string>
    <string name="confirm_to_logout">确认退出该账号吗?</string>
    <string name="try_to_login">正在登录&#8230;</string>
    <string name="edit_channel">编辑频道</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="launch_camera_error">打开相机失败，请确保安装了相机软件</string>
    <string name="launch_gallery_error">打开图库失败，请确保安装了图库软件</string>
    <string name="take_in_wallet">收入囊中</string>
    <string name="fail_to_get_config">获取配置文件失败</string>
    <string name="current_point">当前银两&#160;&#160;</string>
    <string name="no_update_article">没有文章更新</string>
    <string name="update_article_number">更新了?篇文章</string>
    <string name="gold_text_01">革命尚未成功，兄台仍需努力！</string>
    <string name="gold_text_02">业精于勤而荒于嬉，奋斗吧骚年！</string>
    <string name="gold_text_03">猴赛雷，你快让万千小白膜拜啦！</string>
    <string name="gold_text_04">成功就是把复杂的问题简单化，然后全力去DO!</string>
    <string name="gold_text_05">再给点力，你距离高富帅只差一步之遥！</string>
    <string name="gold_text_06">官人，你好有“财”哦，请受秋香一拜！</string>
    <string name="gold_text_07">恭喜您成功玩赚9527，请受四大才子跪拜！</string>
    <string name="alipay_warn">支付宝账号填写后不可修改，请谨慎填写！</string>
    <string name="not_setting">未设置</string>
    <string name="empty_alipy">您还没有设置过支付宝账号</string>
    <string name="cancel_withdraw">取消提现</string>
    <string name="setting_now">马上设置</string>
    <string name="setting_network">设置网络</string>
    <string name="network_error_dialog_message">无网络连接，请检查网络设置</string>

</resources>