<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/main_tabs"
        android:background="@color/line_color" />

    <RadioGroup
        android:id="@+id/main_tabs"
        style="@style/tab_bar" >

        <RadioButton
            android:id="@+id/radio_button0"
            style="@style/tab_bar_item"
            android:checked="true"
            android:drawableTop="@drawable/tab_icon_1_highlight"
            android:text="@string/task_list"
            android:textColor="@color/base_color" />

        <RadioButton
            android:id="@+id/radio_button1"
            style="@style/tab_bar_item"
            android:drawableTop="@drawable/tab_icon_2"
            android:text="@string/article_list" />

        <RadioButton
            android:id="@+id/radio_button2"
            style="@style/tab_bar_item"
            android:drawableTop="@drawable/tab_icon_3"
            android:text="@string/my_profit" />

        <RadioButton
            android:id="@+id/radio_button3"
            style="@style/tab_bar_item"
            android:drawableTop="@drawable/tab_icon_4"
            android:text="@string/user_info" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/line" />

</RelativeLayout>