<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res/com.android.tengfenxiang"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.android.tengfenxiang.view.titlebar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:gravity="center_vertical"
        titlebar:title="@string/modify_password"
        titlebar:titleLeftImg="@drawable/left_arrow"
        titlebar:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/old_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_bar"
        android:padding="10dp"
        android:text="@string/old_password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/old_password_hint"
        android:background="@null"
        android:ems="12"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword"
        android:padding="10dp" >

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/old_password_hint"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/new_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/line1"
        android:padding="10dp"
        android:text="@string/new_password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/new_password_hint"
        android:background="@null"
        android:ems="12"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:padding="10dp" >
    </EditText>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/new_password_hint"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/confirm_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/line2"
        android:padding="10dp"
        android:text="@string/confirm_password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/confirm_password_hint"
        android:background="@null"
        android:ems="12"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="10dp" >
    </EditText>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/confirm_password_hint"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:text="@string/confirm_modify"
        android:textSize="20sp" />

</RelativeLayout>