<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res/com.android.tengfenxiang"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_normal" >

    <com.android.tengfenxiang.view.titlebar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:gravity="center_vertical"
        titlebar:title="@string/withdraw_apply"
        titlebar:titleLeftImg="@drawable/left_arrow"
        titlebar:titleTextColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_bar"
        android:padding="12dp"
        android:text="@string/withdrawable_points"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/withdrawable_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title_bar"
        android:padding="12dp"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/withdrawable_points"
        android:background="@color/line_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/line"
        android:padding="12dp"
        android:text="@string/apply_withdraw_points"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/unit_yuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/line"
        android:padding="12dp"
        android:text="@string/unit_yuan"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/withdraw_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/unit_yuan"
        android:layout_below="@+id/line"
        android:layout_toLeftOf="@+id/unit_yuan"
        android:background="@null"
        android:ems="5"
        android:gravity="center"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/unit_yuan"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/alipay_account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:background="@drawable/item_bg"
        android:clickable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/alipay_account"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/alipay_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/arrow"
            android:padding="12dp"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/right_arrow_dark" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/alipay_account_layout"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alipay_account_layout"
        android:layout_margin="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/apply_withdraw"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>