<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res/com.android.tengfenxiang"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.android.tengfenxiang.view.titlebar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:gravity="center_vertical"
        titlebar:title="@string/withdraw_records"
        titlebar:titleLeftImg="@drawable/left_arrow"
        titlebar:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_bar"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/withdraw_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/withdraw_data"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/withdraw_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/withdraw_count"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/top_bar"
        android:background="@color/line_color" />

    <com.android.tengfenxiang.view.xlistview.XListView
        android:id="@+id/records_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/line" >
    </com.android.tengfenxiang.view.xlistview.XListView>

    <TextView
        android:id="@+id/empty_withdraw_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/empty_withdraw_hint"
        android:textColor="@color/base_color"
        android:textSize="18sp"
        android:visibility="gone" />

</RelativeLayout>