<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res/com.android.tengfenxiang"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.android.tengfenxiang.view.titlebar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:gravity="center_vertical"
        titlebar:title="@string/login"
        titlebar:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:ems="11"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="5dp" >

        <requestFocus />
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/base_color" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp" >
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/base_color" />

    <CheckBox
        android:id="@+id/save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/save_password"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>