<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res/com.android.tengfenxiang"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.android.tengfenxiang.view.titlebar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:gravity="center_vertical"
        titlebar:titleLeftImg="@drawable/left_arrow"
        titlebar:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/task_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_bar"
        android:layout_margin="10dp"
        android:text="@string/task_profit_hint"
        android:textColor="@color/gray" />

    <ListView
        android:id="@+id/task_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/task_hint"
        android:overScrollMode="never"
        android:scrollbars="none" >
    </ListView>

    <TextView
        android:id="@+id/article_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/task_list"
        android:layout_margin="10dp"
        android:text="@string/article_profit_hint"
        android:textColor="@color/gray" />

    <ListView
        android:id="@+id/article_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/article_hint"
        android:overScrollMode="never"
        android:scrollbars="none" >
    </ListView>

    <TextView
        android:id="@+id/other_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/article_list"
        android:layout_margin="10dp"
        android:text="@string/other"
        android:textColor="@color/gray" />

    <ListView
        android:id="@+id/other_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/other_hint"
        android:overScrollMode="never"
        android:scrollbars="none" >
    </ListView>

</RelativeLayout>